fix the image align

--- a/input/css/custom.css
+++ b/input/css/custom.css
@@ -22,3 +22,8 @@ nav a,
 .page-header h1 {
 	text-transform: capitalize;
 }
+
+/* josh's stuff */
+.img-right {
+        float: right;
+    }
